Source/WebCore/animation/DeclarativeAnimation.cpp
@@ -234,6 +234,27 @@ AnimationEffectPhase DeclarativeAnimation::phaseWithoutEffect() const
     return *animationCurrentTime < 0_s ? AnimationEffectPhase::Before : AnimationEffectPhase::After;
 }
 
+Seconds DeclarativeAnimation::effectTimeAtStart() const
+{
+    if (auto* effect = this->effect())
+        return effect->delay();
+    return 0_s;
+}
+
+Seconds DeclarativeAnimation::effectTimeAtIteration(double iteration) const
+{
+    if (auto* effect = this->effect())
+        return effect->delay() + effect->iterationDuration() * iteration;
+    return 0_s;
+}
+
+Seconds DeclarativeAnimation::effectTimeAtEnd() const
+{
+    if (auto* effect = this->effect())
+        return effect->endTime();
+    return 0_s;
+}
+
 void DeclarativeAnimation::invalidateDOMEvents(Seconds elapsedTime)
 {
     if (!m_owningElement)
@@ -276,54 +297,55 @@ void DeclarativeAnimation::invalidateDOMEvents(Seconds elapsedTime)
     if (is<CSSAnimation>(this)) {
         // https://drafts.csswg.org/css-animations-2/#events
         if ((wasIdle || wasBefore) && isActive)
-            enqueueDOMEvent(eventNames().animationstartEvent, intervalStart);
+            enqueueDOMEvent(eventNames().animationstartEvent, intervalStart, effectTimeAtStart());
         else if ((wasIdle || wasBefore) && isAfter) {
-            enqueueDOMEvent(eventNames().animationstartEvent, intervalStart);
-            enqueueDOMEvent(eventNames().animationendEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().animationstartEvent, intervalStart, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().animationendEvent, intervalEnd, effectTimeAtEnd());
         } else if (wasActive && isBefore)
-            enqueueDOMEvent(eventNames().animationendEvent, intervalStart);
+            enqueueDOMEvent(eventNames().animationendEvent, intervalStart, effectTimeAtEnd());
         else if (wasActive && isActive && m_previousIteration != iteration) {
             auto iterationBoundary = iteration;
             if (m_previousIteration > iteration)
                 iterationBoundary++;
             auto elapsedTime = animationEffect ? animationEffect->iterationDuration() * (iterationBoundary - animationEffect->iterationStart()) : 0_s;
-            enqueueDOMEvent(eventNames().animationiterationEvent, elapsedTime);
+            enqueueDOMEvent(eventNames().animationiterationEvent, elapsedTime, effectTimeAtIteration(iteration));
         } else if (wasActive && isAfter)
-            enqueueDOMEvent(eventNames().animationendEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().animationendEvent, intervalEnd, effectTimeAtEnd());
         else if (wasAfter && isActive)
-            enqueueDOMEvent(eventNames().animationstartEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().animationstartEvent, intervalEnd, effectTimeAtStart());
         else if (wasAfter && isBefore) {
-            enqueueDOMEvent(eventNames().animationstartEvent, intervalEnd);
-            enqueueDOMEvent(eventNames().animationendEvent, intervalStart);
+            enqueueDOMEvent(eventNames().animationstartEvent, intervalEnd, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().animationendEvent, intervalStart, effectTimeAtEnd());
         } else if ((!wasIdle && !wasAfter) && isIdle)
-            enqueueDOMEvent(eventNames().animationcancelEvent, elapsedTime);
+            enqueueDOMEvent(eventNames().animationcancelEvent, elapsedTime, elapsedTime);
     } else if (is<CSSTransition>(this)) {
         // https://drafts.csswg.org/css-transitions-2/#transition-events
         if (wasIdle && (isPending || isBefore))
-            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart);
+            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart, effectTimeAtStart());
         else if (wasIdle && isActive) {
-            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart);
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart);
+            auto scheduledEffectTime = effectTimeAtStart();
+            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart, scheduledEffectTime);
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart, scheduledEffectTime);
         } else if (wasIdle && isAfter) {
-            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart);
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart);
-            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().transitionrunEvent, intervalStart, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd, effectTimeAtEnd());
         } else if ((m_wasPending || wasBefore) && isActive)
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart);
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart, effectTimeAtStart());
         else if ((m_wasPending || wasBefore) && isAfter) {
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart);
-            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalStart, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd, effectTimeAtEnd());
         } else if (wasActive && isAfter)
-            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().transitionendEvent, intervalEnd, effectTimeAtEnd());
         else if (wasActive && isBefore)
-            enqueueDOMEvent(eventNames().transitionendEvent, intervalStart);
+            enqueueDOMEvent(eventNames().transitionendEvent, intervalStart, effectTimeAtEnd());
         else if (wasAfter && isActive)
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalEnd);
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalEnd, effectTimeAtStart());
         else if (wasAfter && isBefore) {
-            enqueueDOMEvent(eventNames().transitionstartEvent, intervalEnd);
-            enqueueDOMEvent(eventNames().transitionendEvent, intervalStart);
+            enqueueDOMEvent(eventNames().transitionstartEvent, intervalEnd, effectTimeAtStart());
+            enqueueDOMEvent(eventNames().transitionendEvent, intervalStart, effectTimeAtEnd());
         } else if ((!wasIdle && !wasAfter) && isIdle)
-            enqueueDOMEvent(eventNames().transitioncancelEvent, elapsedTime);
+            enqueueDOMEvent(eventNames().transitioncancelEvent, elapsedTime, elapsedTime);
     }
 
     m_wasPending = isPending;
@@ -331,13 +353,21 @@ void DeclarativeAnimation::invalidateDOMEvents(Seconds elapsedTime)
     m_previousIteration = iteration;
 }
 
-void DeclarativeAnimation::enqueueDOMEvent(const AtomString& eventType, Seconds elapsedTime)
+void DeclarativeAnimation::enqueueDOMEvent(const AtomString& eventType, Seconds elapsedTime, Seconds scheduledEffectTime)
 {
     if (!m_owningElement)
         return;
 
+    auto scheduledTimelineTime = [&]() -> std::optional<Seconds> {
+        if (auto* documentTimeline = dynamicDowncast<DocumentTimeline>(timeline())) {
+            if (auto scheduledAnimationTime = convertAnimationTimeToTimelineTime(scheduledEffectTime))
+                return documentTimeline->convertTimelineTimeToOriginRelativeTime(*scheduledAnimationTime);
+        }
+        return std::nullopt;
+    }();
+
     auto time = secondsToWebAnimationsAPITime(elapsedTime) / 1000;
-    auto event = createEvent(eventType, time, m_owningPseudoId);
+    auto event = createEvent(eventType, scheduledTimelineTime, time, m_owningPseudoId);
     event->setTarget(RefPtr { m_owningElement.get() });
     enqueueAnimationEvent(WTFMove(event));
 }
